Resource - Merge all vo (api, ui and app) to single vo